# AIOS

./: .gitignore  README.md  ROUTING_POLICY.md  package-lock.json  priority_project.md  pyproject.toml  startup.md
aios-frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
aios-frontend/src/: App.svelte  three-runtime.ts
aios-frontend/src-tauri/: Cargo.toml  tauri.conf.json
aios_backend_v2/: __init__.py  app.py  app.py.bak  errors.py  intent_constraints.py  llm.py  llm_router.py  logs.py  permissions.py  prompt.py  settings.py  tool_gate.py  tts.py
aios_backend_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aios_backend_v2/context/: __init__.py  assembler.py  snapshot.py  turn_context.py
aios_backend_v2/debug/: __init__.py  context_debug.py
aios_backend_v2/indexer/: __init__.py  apps.py
aios_backend_v2/intent/: __init__.py  intent_stabilizer.py
aios_backend_v2/lex/: __init__.py  gazetteer.py  intent_actions.py  intent_grammar.py
aios_backend_v2/memory/: __init__.py  db.py  ltm.py  memory_evaluator.py  profile.py  short_term.py  store.py
aios_backend_v2/output/: __init__.py  tone_regulator.py
aios_backend_v2/persona/: core.py  phrases.py
aios_backend_v2/runtime/: __init__.py  cache.py
aios_backend_v2/state/: __init__.py  scene_manager.py
aios_backend_v2/system_card/: __init__.py  card.py
aios_backend_v2/tools/: __init__.py  base.py  (+20 more)
docs/: QA_ContextAssembler.md
scripts/: dev.sh  dev.sh.bak  kill-ports.sh
src-tauri/: Cargo.toml  tauri.conf.json
tools/: bench.sh
(+30 files in other folders)
